--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                    </div>
 
                    <div class="maincontent-img">
-                   <img src="C:\Users\BOY\Downloads\download.png" width="100%" height="90%">
+                   <img src="https://imgur.com/a/ms5qcU0" width="100%" height="90%" >
             
                 </div>
              </div>
@@ -129,7 +129,7 @@
                     3.นำผู้ป่วยเขาไปยังถุงสูญญากาศโดยใช้ซิบด้านข้าง<br>
                     4.ปลดล็อคที่ห้ามล้อพร้อมทำการเคลื่อนย้าย<br>
                     หลังจากใช้งาน<br>
-                    1.หลังจากเคลื่อนย้ายผุ้ป่วยเสร็จแล้วเรียบร้อยให้เปิดเครื่องair treatment ทิ้งไว้ประมาณ1นาที เพื่อให้อากาศภายในถุงสูญญากาศถ่ายเท<br>
+                    1.หลังจากเคลื่อนย้ายผู้ป่วยเสร็จแล้วเรียบร้อยให้เปิดเครื่องair treatment ทิ้งไว้ประมาณ1นาที เพื่อให้อากาศภายในถุงสูญญากาศถ่ายเท<br>
                     2.ปิดเครื่อง Air treatment โดยปิด Switch off ข้างกล่อง Air treatment <br>
                     3.ปิดซิบและช่องลมที่ปลายเตียง <br>
 
@@ -158,8 +158,8 @@
                    7.นางสาว กวิสรา หนูวงศ์ (นักศึกษา) <br>
                    8.นาย อนุวัฒน์  มณีพรหม (ครูที่ปรึกษา)<br>
                    9.ว่าที่ร้อยตรีอดิศักดิ์   รัตนคช (ครูที่ปรึกษา) <br>
-                   10.นายกัณฑ์อเนก ศรีชุมพวง (ครูที่ปรึกษา) <br>
-                   11.นายจรินทร์  เมืองหนู (ครูที่ปรึกษา) <br>
+                   10.นาย กัณฑ์อเนก ศรีชุมพวง (ครูที่ปรึกษา) <br>
+                   11.นาย จรินทร์  เมืองหนู (ครูที่ปรึกษา) <br>
                    12.นายมณฑป ไชยบัณฑิต (ครูที่ปรึกษา) <br>
 
                 </p>
