--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                    </div>
 
                    <div class="maincontent-img">
-                   <img src="https://imgur.com/a/ms5qcU0" width="100%" height="90%" >
+                   <img src="https://i.imgur.com/IKDSyZ2.jpeg" width="100%" height="90%" >
             
                 </div>
              </div>
