--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
             <h4>ติดต่อ</h4>
             <a style="color: white;" href="https://www.facebook.com/boy.anuwat1" target="_blank">Facebook</a> <br>
             <a style="color: white;" href="https://line.me/ti/p/4RIcq3Fb9d" target="_blank">Line</a><br>
-            <a style="color: white;" href="tel:+666388226938">Tel</a><br>
-            <p>E-mail : </p>
+            <a style="color: white;" href="tel:+66855807497" target="_blank" >Tel</a><br>
+            <a style="color: white;" href="anuwat19912@gmail.com" target="_blank" >E-mail</a>
         </div>
     </div>
 </div>
